--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -11,8 +11,8 @@
     <nav>
         <h2 class="verborgen">Menu</h2>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li class="submenu"><a class="current" href="html/Producten.html">Producten</a>
+            <li><a class="current"  href="index.html">Home</a></li>
+            <li class="submenu"><a href="html/Producten.html">Producten</a>
                 <ul>
                     <li><a href="html/productendetails/productdetailpagina.html">product</a></li>
                 </ul>
