reset knoppen gemaakt voor filters

--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Producten</title>
     <link rel="stylesheet" href="../css/project.css">
+    <script src="../script/project.js"></script>
 </head>
 <body class="grid">
 <h1 class="verborgen">Producten Pagina</h1>
@@ -43,7 +44,6 @@
             <section id="filter">
                 <h3>filter</h3>
                 <section>
-                    <input type="reset" id="reset">
                     <h4 class="filterType">type</h4>
                     <label for="ergonomic" class="ergonomicLabel">ergonomic</label>
                     <label for="opvouwbaar" class="opvouwbaarLabel">opvouwbaar</label>
@@ -68,34 +68,34 @@
             </section>
             <section class="row">
                 <h3 class="h">Membrane keyboards</h3>
-                <section class="column card RBG fullSize normaal resetType resetGrootte resetLichten">
+                <section class="column card RBG fullSize normaal">
                     <a href="productendetails/productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
                                                                              alt="Membrane keyboard zwart met RBG lichten"></a>
                     <h4>Membrane keyboard zwart met RBG lichten</h4>
                     <p>19,<sup>99</sup>euro</p>
                 </section>
-                <section class="column card RBG fullSize normaal resetType resetGrootte resetLichten">
+                <section class="column card RBG fullSize normaal">
                     <a href="productendetails/RBGKeyboardWit.html"><img src="../media/membraneKeyboard/RBGKeyboardWit.jpg"
                                                                         alt="Membrane keyboard wit met RBG lichten"></a>
                     <h4>Membrane keyboard wit met RBG lichten</h4>
                     <p>24,<sup>99</sup>euro</p>
                 </section>
 
-                <section class="column card compact geenLichten normaal resetType resetGrootte resetLichten">
+                <section class="column card compact geenLichten normaal ">
                     <a href="productendetails/CompactZwartKeyboard.html"><img src="../media/membraneKeyboard/CompactZwartKeyboard.jpg"
                                                                               alt="Compact zwart Keyboard"></a>
                     <h4>Compact zwart Keyboard</h4>
                     <p>10 euro</p>
                 </section>
 
-                <section class="column card ergonomic geenLichten fullSize resetType resetGrootte resetLichten">
+                <section class="column card ergonomic geenLichten fullSize">
                     <a href="productendetails/ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg"
                                                                                 alt="Ergonomic zwart keyboard"></a>
                     <h4>Ergonomic zwart keyboard</h4>
                     <p>19,<sup>99</sup>euro</p>
                 </section>
 
-                <section class="column card fullSize geenLichten normaal resetType resetGrootte resetLichten">
+                <section class="column card fullSize geenLichten normaal ">
                     <a href="productendetails/TypeMachineStijlWitKeyboard.html"><img
                             src="../media/membraneKeyboard/TypeMachineStijlWitKeyboard.jpg"
                             alt="Type machine stijl wit keyboard"></a>
@@ -103,19 +103,19 @@
                     <p>30 euro</p>
                 </section >
 
-                <section class="column card normaal fullSize geenLichten resetType resetGrootte resetLichten">
+                <section class="column card normaal fullSize geenLichten">
                     <img src="../media/membraneKeyboard/KeyboardMetTouchpad.jpg" alt="Keyboard Met Touchpad">
                     <h4>Keyboard Met Touchpad</h4>
                     <p>40 euro</p>
                 </section>
 
-                <section class="column card opvouwbaar fullSize geenLichten resetType resetGrootte resetLichten">
+                <section class="column card opvouwbaar fullSize geenLichten">
                     <img src="../media/membraneKeyboard/OpvouwbaarKeyboard.jpg" alt="Opvouwbaar Keyboard">
                     <h4>Opvouwbaar keyboard</h4>
                     <p>35 euro</p>
                 </section>
 
-                <section class="column card opvouwbaar fullSize geenLichten resetType resetGrootte resetLichten">
+                <section class="column card opvouwbaar fullSize geenLichten">
                     <img src="../media/membraneKeyboard/SiliconeKeyboard.jpg" alt="Silicone Keyboard">
                     <h4>Silicone Keyboard</h4>
                     <p>4,<sup>99</sup>euro</p>
