wit ruimtes weggehaald

--- a/examenproject/html/Bevestiging.html
+++ b/examenproject/html/Bevestiging.html
@@ -12,8 +12,12 @@
         <h2 class="verborgen">Menu</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="Producten.html">Producten</a></li>
-            <li><a class="current" href="Personalisering.html">Personalisering</a></li>
+            <li class="submenu"><a href="Producten.html">Producten</a>
+                <ul>
+                    <li><a href="productendetails/productdetailpagina.html">product</a></li>
+                </ul>
+            </li>
+            <li><a href="Personalisering.html">Personalisering</a></li>
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
         </ul>
@@ -22,6 +26,33 @@
 <main class="panel grid-main">
     <section>
         <h2>Bedankt voor jouw bestelling</h2>
+        <section>
+            <h3>ingevulde informatie</h3>
+            <section>
+                <h4>Naam en achternaam</h4>
+                <p>hier naam en achternaam</p>
+            </section>
+            <section>
+                <h4>email</h4>
+                <p>hier email</p>
+            </section>
+            <section>
+                <h4>telefoonnummer</h4>
+                <p>hier telefoonnummer</p>
+            </section>
+            <section>
+                <h4>Land</h4>
+                <p>hier land</p>
+            </section>
+            <section>
+                <h4>leveringsadres</h4>
+                <p>hier leveringsadres</p>
+            </section>
+            <section>
+                <h4>datum</h4>
+                <p>hier datum</p>
+            </section>
+        </section>
     </section>
 </main>
 </body>
