--- a/examenproject/html/productendetails/CompactZwartKeyboard.html
+++ b/examenproject/html/productendetails/CompactZwartKeyboard.html
@@ -28,7 +28,7 @@
     </ol>
 </header>
 <main class="grid-main panel">
-    <section class="detail">
+    <section class="detail-grid">
         <img src="../../media/membraneKeyboard/CompactZwartKeyboardHD.jpg" alt="Compact zwart Keyboard">
         <h2>Compact zwart keyboard </h2>
         <section class="eigenschappen">
