--- a/examenproject/html/productendetails/ErgonomicZwartKeyboard.html
+++ b/examenproject/html/productendetails/ErgonomicZwartKeyboard.html
@@ -28,7 +28,7 @@
     </ol>
 </header>
 <main class="grid-main panel">
-    <section class="detail">
+    <section class="detail-grid">
             <img src="../../media/membraneKeyboard/ErgonomicZwartKeyboardHD.jpg" alt="Ergonomic zwart zwart keyboard">
             <h2>Ergonomic zwart zwart keyboard </h2>
         <section class="eigenschappen">
