--- a/examenproject/html/productendetails/RBGKeyboardWit.html
+++ b/examenproject/html/productendetails/RBGKeyboardWit.html
@@ -28,7 +28,7 @@
     </ol>
 </header>
 <main class="grid-main panel">
-    <section class="detail">
+    <section class="detail-grid">
             <img src="../../media/membraneKeyboard/RBGKeyboardWitHD.jpg" alt="Membrane keyboard wit met RBG lights">
             <h2>Membrane keyboard wit met RBG lights </h2>
         <section class="eigenschappen">
