--- a/examenproject/html/productendetails/TypeMachineStijlWitKeyboard.html
+++ b/examenproject/html/productendetails/TypeMachineStijlWitKeyboard.html
@@ -28,7 +28,7 @@
     </ol>
 </header>
 <main class="grid-main panel">
-    <section class="detail">
+    <section class="detail-grid">
             <img src="../../media/membraneKeyboard/TypeMachineStijlWitKeyboardHD.jpg"
                  alt="Type machine stijl wit keyboard">
             <h2>Type machine stijl wit keyboard </h2>
