--- a/examenproject/html/productendetails/productdetailpagina.html
+++ b/examenproject/html/productendetails/productdetailpagina.html
@@ -27,8 +27,8 @@
         <li><a class="breadcrumbs__item" href=productdetailpagina.html>productdetail</a></li>
     </ol>
 </header>
-<main class=" panel grid-main">
-    <section class="detail">
+<main class=" panel grid-main ">
+    <section class="detail-grid">
         <h2>Membrane keyboard zwart met RBG lights </h2>
         <img src="../../media/membraneKeyboard/RBGKeyboardZwartHD.jpg" alt="Membrane keyboard zwart met RBG lights">
         <section class="eigenschappen">
