--- a/examenproject/html/Contact.html
+++ b/examenproject/html/Contact.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Voedsel en gedrag</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="../css/project.css">
 </head>
 <body class="grid">
@@ -12,13 +12,13 @@
         <h2 class="verborgen">Menu</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li class="submenu"><a class="current" href="Producten.html">Producten</a>
+            <li class="submenu"><a href="Producten.html">Producten</a>
                 <ul>
                     <li><a href="productendetails/productdetailpagina.html">product</a></li>
                 </ul>
             </li>
             <li><a href="Personalisering.html">Personalisering</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a class="current"  href="Contact.html">Contact</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
