--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -15,7 +15,9 @@
             <li><a href="../index.html">Home</a></li>
             <li class="submenu"><a class="current" href="Producten.html">Producten</a>
                 <ul>
-                    <li><a href="productendetails/productdetailpagina.html">product</a></li>
+                    <li><a href="productendetails/productdetailpagina.html">Membrane keyboard</a></li>
+                    <li><a href="productendetails/CompactZwartKeyboard.html">Compact zwart Keyboard</a></li>
+
                 </ul>
             </li>
             <li><a href="Personalisering.html">Personalisering</a></li>
