--- a/examenproject/html/productendetails/RBGKeyboardWit.html
+++ b/examenproject/html/productendetails/RBGKeyboardWit.html
@@ -14,7 +14,9 @@
             <li><a href="../../index.html">Home</a></li>
             <li class="submenu"><a class="current" href="../Producten.html">Producten</a>
                 <ul>
-                    <li><a href="productdetailpagina.html">product</a></li>
+                    <li><a href="productdetailpagina.html">Membrane keyboard</a></li>
+                    <li><a href="CompactZwartKeyboard.html">Compact zwart Keyboard</a></li>
+
                 </ul>
             </li>
             <li><a href="../Personalisering.html">Personalisering</a></li>
