--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -14,7 +14,9 @@
             <li><a class="current"  href="index.html">Home</a></li>
             <li class="submenu"><a href="html/Producten.html">Producten</a>
                 <ul>
-                    <li><a href="html/productendetails/productdetailpagina.html">product</a></li>
+                    <li><a href="html/productendetails/productdetailpagina.html">Membrane keyboard</a></li>
+                    <li><a href="html/productendetails/CompactZwartKeyboard.html">Compact zwart Keyboard</a></li>
+
                 </ul>
             </li>
             <li><a href="html/Personalisering.html">Personalisering</a></li>
