reset filter default active, contact img fefixt

--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -40,9 +40,9 @@
             <input type="radio" id="groene" name="Lichten" value="groene" class="groene">
             <input type="radio" id="rode" name="Lichten" value="rode" class="rode">
             <input type="radio" id="geenLichten" name="Lichten" value="geen lichten" class="geenLichten">
-            <input type="radio" id="resetType" name="type" value="resetType" class="resetType">
-            <input type="radio" id="resetGrootte" name="grootte" value="resetGrootte" class="resetGrootte">
-            <input type="radio" id="resetLichten" name="Lichten" value="resetLichten" class="resetLichten">
+            <input type="radio" id="resetType" name="type" value="resetType" class="resetType" checked>
+            <input type="radio" id="resetGrootte" name="grootte" value="resetGrootte" class="resetGrootte" checked>
+            <input type="radio" id="resetLichten" name="Lichten" value="resetLichten" class="resetLichten" checked>
             <section id="filter">
                 <h3>filter</h3>
                 <section>
