--- a/examenproject/html/Personalisering.html
+++ b/examenproject/html/Personalisering.html
@@ -5,9 +5,9 @@
     <title>Personalisering</title>
     <link rel="stylesheet" href="../css/project.css">
 </head>
-<body class="grid">
+<body class="personalisering-grid">
 <h1 class="verborgen">Personalisering Pagina</h1>
-<header class="grid-header panel">
+<header class="personalisering-grid-header">
     <nav>
         <h2 class="verborgen">Menu</h2>
         <ul>
@@ -25,20 +25,19 @@
         </ul>
     </nav>
 </header>
-<main class="grid-main panel">
+<main class="personalisering-grid-main">
     <section id="formulier">
         <h2>Bestel uw unieke toetsenbord</h2>
-        <form action="Bevestiging.html" method="get">
+        <form action="Bevestiging.html" method="get" id="form">
             <fieldset class="gegevensPersoon">
                 <legend class="legend">gegevens</legend>
-                <label for="naam">Naam* en Achternaam*</label>
-                <input type="text" id="naam" name="naam" placeholder="Muhammet Murat" >
-                <span id="naamfout"></span>
+                <label for="naamID">Naam* en Achternaam*</label>
+                <input type="text" id="naamID" name="naam" placeholder="Muhammet Murat" >
                 <label for="telefoonnummer">Telefoonnummer*</label>
                 <input type="tel" id="telefoonnummer" name="telefoon" placeholder="0481548761"
                        pattern="^0?[1-9][0-9]{7,8}$" required>
-                <label for="email">Email*</label>
-                <input type="email" id="email" name="email" placeholder="info@gmail.com" required>
+                <label for="emailID">Email*</label>
+                <input type="email" id="emailID" name="email" placeholder="info@gmail.com" required>
                 <label for="Land">Land*</label>
                 <input type="text" id="Land" name="Land" placeholder="belgie" required>
                 <label for="leveringsadres">Leveringsadres*</label>
@@ -97,7 +96,7 @@
                 <label for="kleur">Kleur van toetsenbord knoppen*</label>
                 <input type="color" name="kleur" id="kleur">
                 <label for="AZERTY">AZERTY</label>
-                <input type="radio" id="AZERTY" name="layout" value="AZERTY">
+                <input type="radio" id="AZERTY" name="layout" value="AZERTY" checked>
                 <label for="QWERTY">QWERTY</label>
                 <input type="radio" id="QWERTY" name="layout" value="QWERTY">
                 <p>Vakken met een * zijn verplicht, geen layout kozen = wordt het standaard AZERTY.</p>
