--- a/examenproject/html/Bevestiging.html
+++ b/examenproject/html/Bevestiging.html
@@ -30,16 +30,13 @@
         <section>
             <h3>ingevulde informatie</h3>
             <section>
-                <h4>Naam en achternaam</h4>
-                <p>hier naam en achternaam</p>
+                <h4>Naam en achternaam:</h4>
             </section>
             <section>
                 <h4>email</h4>
-                <p>hier email</p>
             </section>
             <section>
                 <h4>telefoonnummer</h4>
-                <p>hier telefoonnummer</p>
             </section>
             <section>
                 <h4>Land</h4>
