--- a/examenproject/html/Personalisering.html
+++ b/examenproject/html/Personalisering.html
@@ -32,7 +32,7 @@
             <fieldset class="gegevensPersoon">
                 <legend class="legend">gegevens</legend>
                 <label for="naamID">Naam* en Achternaam*</label>
-                <input type="text" id="naamID" name="naam" placeholder="Muhammet Murat" >
+                <input type="text" id="naamID" name="naam" placeholder="Muhammet Murat" required>
                 <label for="telefoonnummer">Telefoonnummer*</label>
                 <input type="tel" id="telefoonnummer" name="telefoon" placeholder="0481548761"
                        pattern="^0?[1-9][0-9]{7,8}$" required>
