--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -2,6 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Producten</title>
     <link rel="stylesheet" href="../css/project.css">
     <script src="../script/project.js"></script>
