--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -2,6 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <link rel="stylesheet" href="css/project.css">
 </head>
@@ -16,7 +17,6 @@
                 <ul>
                     <li><a href="html/productendetails/productdetailpagina.html">Membrane keyboard</a></li>
                     <li><a href="html/productendetails/CompactZwartKeyboard.html">Compact zwart Keyboard</a></li>
-
                 </ul>
             </li>
             <li><a href="html/Personalisering.html">Personalisering</a></li>
