--- a/examenproject/html/Bevestiging.html
+++ b/examenproject/html/Bevestiging.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <link rel="stylesheet" href="../css/project.css">
+    <script src="../script/from_result.js"></script>
 </head>
 <body class="grid">
 <header class="panel grid-header">
@@ -28,28 +29,51 @@
 <main class="panel grid-main">
     <section>
         <h2>Bedankt voor jouw bestelling</h2>
-        <section>
+        <section class="IngevuldeInformatie">
             <h3>ingevulde informatie</h3>
             <section>
                 <h4>Naam en achternaam:</h4>
+                <span id="ingevuldeNaam"></span>
             </section>
             <section>
                 <h4>email</h4>
+                <span id="ingevuldeEmail"></span>
             </section>
             <section>
                 <h4>telefoonnummer</h4>
+                <span id="ingevuldeTelefoon"></span>
             </section>
             <section>
                 <h4>Land</h4>
-                <p>hier land</p>
+                <span id="ingevuldeLand"></span>
             </section>
             <section>
                 <h4>leveringsadres</h4>
-                <p>hier leveringsadres</p>
+                <span id="ingevuldeLeveringsadres"></span>
             </section>
             <section>
                 <h4>datum</h4>
-                <p>hier datum</p>
+                <span id="ingevuldeDatum"></span>
+            </section>
+            <section>
+                <h4>afhalen</h4>
+                <span id="afhalenAangeduid"></span>
+            </section>
+            <section>
+                <h4>product</h4>
+                <span id="gekozenProduct"></span>
+            </section>
+            <section>
+                <h4>personaliering</h4>
+                <span id="personalisering"></span>
+            </section>
+            <section>
+                <h4>kleur</h4>
+                <span id="gekozenKleur"></span>
+            </section>
+            <section>
+                <h4>layout</h4>
+                <span id="keyboardLayout"></span>
             </section>
         </section>
     </section>
