--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Producten</title>
     <link rel="stylesheet" href="../css/project.css">
-    <script src="../script/project.js"></script>
+    <script src="../script/form_validation.js"></script>
 </head>
 <body class="grid">
 <h1 class="verborgen">Producten Pagina</h1>
