--- a/examenproject/html/Personalisering.html
+++ b/examenproject/html/Personalisering.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Personalisering</title>
     <link rel="stylesheet" href="../css/project.css">
+    <script src="../script/form_validation.js"></script>
 </head>
 <body class="personalisering-grid">
 <h1 class="verborgen">Personalisering Pagina</h1>
@@ -33,26 +34,27 @@
             <fieldset class="gegevensPersoon">
                 <legend class="legend">gegevens</legend>
                 <label for="naamID">Naam* en Achternaam*</label>
-                <input type="text" id="naamID" name="naam" placeholder="Muhammet Murat" required>
+                <input type="text" id="naamID" name="naam" placeholder="Muhammet Murat" >
+                <span id="naamfout"></span>
                 <label for="telefoonnummer">Telefoonnummer*</label>
                 <input type="tel" id="telefoonnummer" name="telefoon" placeholder="0481548761"
-                       pattern="^0?[1-9][0-9]{7,8}$" required>
+                       pattern="^0?[1-9][0-9]{7,8}$" >
                 <label for="emailID">Email*</label>
-                <input type="email" id="emailID" name="email" placeholder="info@gmail.com" required>
+                <input type="email" id="emailID" name="email" placeholder="info@gmail.com" >
+                <span id="emailfout"></span>
                 <label for="Land">Land*</label>
-                <input type="text" id="Land" name="Land" placeholder="belgie" required>
+                <input type="text" id="Land" name="Land" placeholder="belgie" >
                 <label for="leveringsadres">Leveringsadres*</label>
-                <input type="text" id="leveringsadres" name="leveringsadres" placeholder="staartnaam nr postcode"
-                       required>
+                <input type="text" id="leveringsadres" name="leveringsadres" placeholder="staartnaam nr postcode">
                 <label for="datum">Leveringsdatum*</label>
-                <input type="date" id="datum" name="Leveringsdatum" required>
+                <input type="date" id="datum" name="Leveringsdatum" >
                 <label for="afhalen">Afhalen</label>
                 <input type="checkbox" id="afhalen" name="Afhalen">
             </fieldset>
             <fieldset class="gegevensProduct">
                 <legend class="legend">product informatie</legend>
                 <label for="kiesJeProduct">kies je product*</label>
-                <select name="kies je product" id="kiesJeProduct">
+                <select name="eigenProduct" id="kiesJeProduct">
                     <optgroup label="membrane keyboard">
                         <option value="Membrane keyboard zwart met RBG lichten">Membrane keyboard zwart met RBG
                             lichten
@@ -103,6 +105,7 @@
                 <p>Vakken met een * zijn verplicht, geen layout kozen = wordt het standaard AZERTY.</p>
             </fieldset>
             <input type="submit" value="Verzenden">
+            <span id="verzendenfout"></span>
         </form>
     </section>
 </main>
