--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Producten</title>
     <link rel="stylesheet" href="../css/project.css">
-    <script src="../script/form_validation.js"></script>
 </head>
 <body class="grid">
 <h1 class="verborgen">Producten Pagina</h1>
@@ -30,7 +29,6 @@
 <main class="panel grid-main">
     <section class="producten">
         <h2 class="verborgen">Overzicht</h2>
-        <form action="Producten.html">
             <input type="radio" id="ergonomic" name="type" value="ergonomic" class="ergonomic">
             <input type="radio" id="opvouwbaar" name="type" value="opvouwbaar" class="opvouwbaar">
             <input type="radio" id="normaal" name="type" value="normaal" class="normaal">
@@ -70,7 +68,7 @@
                 </section>
             </section>
             <section class="row">
-                <h3 class="h">Membrane keyboards</h3>
+                <h3>Membrane keyboards</h3>
                 <section class="column card RBG fullSize normaal">
                     <a href="productendetails/productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
                                                                              alt="Membrane keyboard zwart met RBG lichten"></a>
@@ -204,7 +202,6 @@
                     <p>24,<sup>99</sup>euro</p>
                 </section>
             </section>
-        </form>
     </section>
 </main>
 </body>
