--- a/examenproject/html/Bevestiging.html
+++ b/examenproject/html/Bevestiging.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <link rel="stylesheet" href="../css/project.css">
-    <script src="../script/from_result.js"></script>
+    <script src="../script/form_result.js"></script>
 </head>
 <body class="grid">
 <header class="panel grid-header">
