dynamische pagina verder afgemmakt

--- a/examenproject/html/Personalisering.html
+++ b/examenproject/html/Personalisering.html
@@ -102,7 +102,7 @@
                 <input type="radio" id="AZERTY" name="layout" value="AZERTY" checked>
                 <label for="QWERTY">QWERTY</label>
                 <input type="radio" id="QWERTY" name="layout" value="QWERTY">
-                <p>Vakken met een * zijn verplicht, geen layout kozen = wordt het standaard AZERTY.</p>
+                <p>Vakken met een * zijn verplicht</p>
             </fieldset>
             <input type="submit" value="Verzenden">
             <span id="verzendenfout"></span>
